--- a/test2.html
+++ b/test2.html
@@ -123,10 +123,10 @@
 <script>
     wx.config({
         debug: true,
-        appId: 'wxe5a6125a5d3fb1f8',
-        timestamp: 1420870884592,
+        appId: 'wx5fe4775a6bf0b5c1',
+        timestamp: 1422237087,
         nonceStr: 'VQhYOUJRz6RolHqN',
-        signature: 'e30fd6ba0ba6de3eec9c8a6b96a86cd577cce9a5',
+        signature: '6c3c3a663b887a14758cd0a28ed3de8d6f6377dd',
         jsApiList: [
             'checkJsApi',
             'onMenuShareTimeline',
@@ -668,7 +668,6 @@ wx.ready(function () {
 wx.error(function (res) {
     alert(res.errMsg);
 });
-
 </script>
 
 </body>
