--- a/wxcat/index.html
+++ b/wxcat/index.html
@@ -224,7 +224,7 @@
         })(window);
 
         wx.config({
-            debug: false,
+            debug: true,
             appId: 'wxe5a6125a5d3fb1f8',
             timestamp: 1420878660,
             nonceStr: 'VQhYOUJRz6RolHqN',
