--- a/wxcat/test.html
+++ b/wxcat/test.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>2-22</title>
+    <title>4-53</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <link rel="stylesheet" href="http://demo.open.weixin.qq.com/jssdk/css/style.css">
 </head>
@@ -610,10 +610,10 @@ wx.ready(function () {
     // 10.1 发起一个支付请求
     document.querySelector('#chooseWXPay').onclick = function () {
         wx.chooseWXPay({
-            timestamp: 1414723227,
-            nonceStr: 'noncestr',
+            timestamp: 1422867192,
+            nonceStr: 'ibuaiVcKdpRxkhJA',
             package: 'addition=action_id%3dgaby1234%26limit_pay%3d&bank_type=WX&body=innertest&fee_type=1&input_charset=GBK&notify_url=http%3A%2F%2F120.204.206.246%2Fcgi-bin%2Fmmsupport-bin%2Fnotifypay&out_trade_no=1414723227818375338&partner=1900000109&spbill_create_ip=127.0.0.1&total_fee=1&sign=432B647FE95C7BF73BCD177CEECBEF8D',
-            paySign: 'bd5b1933cda6e9548862944836a9b52e8c9a2b69'
+            paySign: 'B1CD7D7ED7DA44A84654D85C2DBA82BC'
         });
     };
 
