更新动态加密

--- a/wxcat/test.html
+++ b/wxcat/test.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>5-09</title>
+    <title>5-58</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <link rel="stylesheet" href="http://demo.open.weixin.qq.com/jssdk/css/style.css">
 </head>
@@ -612,7 +612,7 @@ wx.ready(function () {
         wx.chooseWXPay({
             timestamp: 1422867192,
             nonceStr: 'ibuaiVcKdpRxkhJA',
-            package: 'addition=action_id%3dgaby1234%26limit_pay%3d&bank_type=WX&body=innertest&fee_type=1&input_charset=UTF-8&out_trade_no=1414723227818375338&partner=1900000109&spbill_create_ip=127.0.0.1&total_fee=1&sign=B1CD7D7ED7DA44A84654D85C2DBA82BC',
+            package: 'addition=action_id%3dgaby1234%26limit_pay%3d&bank_type=WX&body=innertest&fee_type=1&'+'input_charset=UTF-8&out_trade_no=1414723227818375338&partner=1900000109&spbill_create_ip=127.0.0.1&total_fee=1',
             signType: "MD5",
             paySign: 'B1CD7D7ED7DA44A84654D85C2DBA82BC'
         });
