音频测试添加返回按钮

--- a/audio_test/dom_auto_play_1.html
+++ b/audio_test/dom_auto_play_1.html
@@ -4,6 +4,7 @@
         <title>DOM AUDIO 自动播放测试1</title>
     </head>
     <body>
+        <a href="./index.html">返回</a>
         <audio id="audio" src="http://tools.itharbors.com/christmas/res/sounds/ss.mp3"></audio>
         <script>
             (function () {
