--- a/audio_test/webaudio_auto_play_1.html
+++ b/audio_test/webaudio_auto_play_1.html
@@ -4,6 +4,7 @@
         <title>WEBAUDIO 自动播放测试1</title>
     </head>
     <body>
+        <a href="./index.html">返回</a>
 
         <script>
             (function (url) {
