--- a/audio_test/dom_auto_play_3.html
+++ b/audio_test/dom_auto_play_3.html
@@ -4,6 +4,7 @@
         <title>DOM AUDIO 自动播放测试3</title>
     </head>
     <body>
+        <a href="./index.html">返回</a>
 
         <script>
             (function () {
