音频测试返回按钮

--- a/audio_test/dom_auto_play_2.html
+++ b/audio_test/dom_auto_play_2.html
@@ -4,6 +4,7 @@
         <title>DOM AUDIO 自动播放测试2</title>
     </head>
     <body>
+        <a href="./index.html">返回</a>
         <audio autoplay="autoplay" src="http://tools.itharbors.com/christmas/res/sounds/ss.mp3"></audio>
     </body>
 </html>
