添加 webaudio 测试2

--- a/audio_test/index.html
+++ b/audio_test/index.html
@@ -10,5 +10,6 @@
         <a href="./dom_auto_play_2.html">DOM 自动播放测试2</a>
         <a href="./dom_auto_play_3.html">DOM 自动播放测试3</a>
         <a href="./webaudio_auto_play_1.html">WEBAUDIO 自动播放测试1</a>
+        <a href="./webaudio_auto_play_2.html">WEBAUDIO 自动播放测试2</a>
     </body>
 </html>
